subindo parte final do projeto

--- a/src/pages/Filme/filme.css
+++ b/src/pages/Filme/filme.css
@@ -12,11 +12,12 @@
 }
 
 .filmeInfo p {
-  width: 711px;
+  width: 100%;
 }
 
 .filmeInfo img {
   border-radius: 20px;
+  width: 100%;
 }
 
 .divFilme {
